added stake info link and adjusted a silly class bug

--- a/src/components/stake/elements/pool/Rows/style.scss
+++ b/src/components/stake/elements/pool/Rows/style.scss
@@ -7,7 +7,7 @@
   border: 1px solid #4a8cc9;
   border-radius: 0.75rem;
   background-color: white;
-  margin: 50px 0 25px 0;
+  margin: 0 0 25px 0;
   overflow: hidden;
   box-shadow: $shadow-soft-light;
 
