--- a/src/components/stake/elements/pool/Boxes/style.scss
+++ b/src/components/stake/elements/pool/Boxes/style.scss
@@ -6,7 +6,7 @@
   position: relative;
   border: 1px solid #4a8cc9;
   border-radius: 0.75rem;
-  margin: 50px 0 25px 0;
+  margin: 0 0 25px 0;
   overflow: hidden;
   box-shadow: $shadow-soft-light;
 
