--- a/src/components/stake/style.scss
+++ b/src/components/stake/style.scss
@@ -174,6 +174,7 @@ button[disabled] {
       &__caption {
         background-color: rgba(#ffffff, 0.65);
         padding: 1em;
+        padding-top: 1.5em;
         position: relative;
         border-radius: 0 0 3px 3px;
       }
@@ -192,8 +193,8 @@ button[disabled] {
       &__type {
         position: absolute;
         top: 0;
-        right: 1em;
-        transform: translateY(-50%);
+        right: 0.5em;
+        transform: translateY(-30%);
         color: #ffffff;
         text-transform: uppercase;
         font-family: "Open Sans Condensed", "Open Sans", helvetica, sans-serif;
