--- a/src/components/stake/style.scss
+++ b/src/components/stake/style.scss
@@ -100,6 +100,7 @@ button[disabled] {
       border-radius: 0.5rem;
       padding: 8px 14px;
       margin: auto;
+      margin-bottom: 5px;
       max-width: 400px;
       & .max-btn {
         font-size: 14px;
